# ThaiRAG

./: .dockerignore  .env.example  .env.prod.example  .gitignore  CLA.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  NOTICE  README.md  docker-compose.prod.yml  docker-compose.registry.yml  docker-compose.scale.yml  docker-compose.test-idp.yml  docker-compose.yml  prometheus.scale.yml  prometheus.yml  rust-toolchain.toml
admin-ui/: index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.tsbuildinfo  vite.config.ts
chat-ui/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  vite.config.ts
config/: default.toml
crates/thairag-agent/: Cargo.toml
crates/thairag-agent/src/: active_learning.rs  chat_pipeline.rs  citation_parser.rs  colbert_reranker.rs  confidence.rs  context_compactor.rs  context_curator.rs  contextual_compression.rs  conversation_memory.rs  corrective_rag.rs  degradation.rs  doc_ops.rs  doc_selector.rs  graph_rag.rs  language_adapter.rs  lib.rs  live_retrieval.rs  map_reduce.rs  multimodal_rag.rs  orchestrator.rs  personal_memory.rs  pipeline_orchestrator.rs  quality_guard.rs  query_analyzer.rs  query_rewriter.rs  rag_engine.rs  ragas_eval.rs  raptor.rs  reasoning_retriever.rs  response_generator.rs  self_rag.rs  speculative_rag.rs  structured_extraction.rs  table_linearize.rs  tool_router.rs
crates/thairag-agent/src/guardrails/: input.rs  mod.rs  output.rs  streaming.rs  types.rs
crates/thairag-agent/src/guardrails/detectors/: injection.rs  mod.rs  pii.rs  secrets.rs
crates/thairag-api/: Cargo.toml
crates/thairag-api/examples/: test_postgres.rs
crates/thairag-api/src/: api_version.rs  app_state.rs  audit.rs  backup.rs  builtin_plugins.rs  cached_embedding.rs  chat_history.rs  csrf.rs  embedding_cache.rs  error.rs  eval.rs  generation.rs  job_queue.rs  knowledge_graph.rs  lib.rs  login_tracker.rs  main.rs  metrics.rs  model_catalog.rs  net_guard.rs  oidc.rs  owui_feedback_sync.rs  plugin_hooks.rs  plugin_registry.rs  rate_limit.rs  session.rs  store.rs  training_runner.rs  vault.rs  vector_migration.rs  webhook.rs
crates/thairag-api/src/routes/: ab_test.rs  acl.rs  api_keys.rs  auth.rs  backup.rs  chat.rs  collaboration.rs  connectors.rs  conversations.rs  documents.rs  eval.rs  feedback.rs  finetune.rs  guardrails.rs  health.rs  km.rs  knowledge_graph.rs  lineage.rs  mod.rs  models.rs  personal_memory.rs  plugins.rs  prompt_marketplace.rs  rate_limit_stats.rs  rbac.rs  search_analytics.rs  settings.rs  tenants.rs  test_query.rs  vault.rs  vector_migration.rs  webhooks.rs  ws_chat.rs
crates/thairag-api/src/routes/v2/: mod.rs  v2_chat.rs  v2_models.rs  v2_search.rs  version_info.rs
crates/thairag-api/src/store/: memory.rs  mod.rs  postgres.rs  postgres_schema.sql  schema.sql  sqlite.rs
crates/thairag-api/tests/: api_tests.rs
crates/thairag-auth/: Cargo.toml
crates/thairag-auth/src/: claims.rs  jwt.rs  lib.rs  middleware.rs
crates/thairag-cli/: Cargo.toml
crates/thairag-cli/src/: main.rs
crates/thairag-core/: Cargo.toml
crates/thairag-core/src/: backpressure.rs  error.rs  lib.rs  models.rs  permission.rs  prompt_registry.rs  traits.rs  types.rs
crates/thairag-document/: Cargo.toml  build.rs
crates/thairag-document/examples/: diagnose_tables.rs  dump_page_pngs.rs  make_borderless_pdf.rs  make_complex_docx.rs  make_edge_case_fixtures.rs  make_grouped_header_docx.rs  profile_corpus.rs
crates/thairag-document/src/: chunker.rs  conversion_fidelity.rs  converter.rs  image.rs  lib.rs  ocr.rs  office_media.rs  office_tables.rs  pdf_rasterizer.rs  pdfium_engine.rs  pipeline.rs  region_router.rs  semantic.rs  semantic_prompts.rs  smart_pdf.rs  table_chunk_fix.rs  table_extractor.rs  table_lattice.rs  table_stream.rs  text_utils.rs  thai_chunker.rs  tree_builder.rs  window_chunker.rs
crates/thairag-document/src/ai/: analyzer.rs  chunker.rs  converter.rs  enricher.rs  mod.rs  orchestrator.rs  pipeline.rs  prompts.rs  quality.rs
crates/thairag-document/tests/: borderless_fixture.rs  images_in_cells_fixture.rs  lattice_comb_fixture.rs  multipage_table_fixture.rs  scanned_pdf_fixture.rs  table_lattice_fixture.rs  table_rescue_fixture.rs  thai_real_tables_fixture.rs
crates/thairag-mcp/: Cargo.toml
crates/thairag-mcp/src/: client.rs  lib.rs  sync_engine.rs  sync_scheduler.rs  webhook.rs
crates/thairag-provider-embedding/: Cargo.toml
crates/thairag-provider-embedding/src/: clip_provider.rs  cohere_embedding.rs  fastembed_provider.rs  lib.rs  ollama_embedding.rs  openai_embedding.rs  retry.rs
crates/thairag-provider-llm/: Cargo.toml
crates/thairag-provider-llm/src/: claude.rs  gemini.rs  lib.rs  ollama.rs  openai.rs  retry.rs
crates/thairag-provider-redis/: Cargo.toml
crates/thairag-provider-redis/src/: connection.rs  embedding_cache.rs  job_queue.rs  lib.rs  session_store.rs
crates/thairag-provider-redis/tests/: redis_integration.rs
crates/thairag-provider-reranker/: Cargo.toml
crates/thairag-provider-reranker/src/: cohere.rs  jina.rs  lib.rs  passthrough.rs
crates/thairag-provider-search/: Cargo.toml
crates/thairag-provider-search/src/: lib.rs  tantivy_search.rs
crates/thairag-provider-vectordb/: Cargo.toml
crates/thairag-provider-vectordb/src/: chromadb.rs  in_memory.rs  lib.rs  milvus.rs  personal_memory_inmemory.rs  personal_memory_qdrant.rs  pgvector.rs  pinecone.rs  qdrant.rs  routed.rs  weaviate.rs
docs/: ADMIN_UI_GUIDE.md  API_REFERENCE.md  ARCHITECTURE.md  ATTACHMENTS_DESIGN.md  BENCHMARK_RESULTS.md  CHAT_UI_ROADMAP.md  CONFIGURATION_GUIDE.md  DEPLOYMENT_GUIDE.md  DOCUMENT_COMPLEXITY_ROUTING_DESIGN.md  DOCUMENT_PROCESSING_FLOW.md  FEATURE_TESTING_GUIDE.md  INGEST_REVIEW_2026-05-28.md  INTEGRATION_GUIDE.md  LAUNCH_RUNBOOK.md  MANUAL_TEST_GUIDE.md  MODEL_SETUP.md  OCR_VS_VLM_SPIKE.md  OIDC_TESTING.md  OPERATOR_GUIDE.md  OWUI_PARITY.md  SMART_PDF_DESIGN.md  STREAMING_GUARDRAILS_DESIGN.md  TESTING_GUIDE.md  api-guide.md  scaling.md
sdks/python/: README.md  pyproject.toml
sdks/python/thairag/: __init__.py  client.py  types.py
(+384 files in other folders)
