[workspace]
resolver = "3"
members = [
    "crates/thairag-core",
    "crates/thairag-config",
    "crates/thairag-thai",
    "crates/thairag-auth",
    "crates/thairag-provider-llm",
    "crates/thairag-provider-embedding",
    "crates/thairag-provider-vectordb",
    "crates/thairag-provider-search",
    "crates/thairag-provider-reranker",
    "crates/thairag-document",
    "crates/thairag-search",
    "crates/thairag-agent",
    "crates/thairag-api",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }

# Search
tantivy = "0.25"

# Thai NLP
nlpo3 = "1.4"

# Vector DB
qdrant-client = "1.13"

# Templates
askama = "0.13"

# Configuration
config = "0.14"

# Embeddings
fastembed = "4.4"

# Auth
jsonwebtoken = "9.3"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
anyhow = "1.0"
async-trait = "0.1"

# Internal crates
thairag-core = { path = "crates/thairag-core" }
thairag-config = { path = "crates/thairag-config" }
thairag-thai = { path = "crates/thairag-thai" }
thairag-auth = { path = "crates/thairag-auth" }
thairag-provider-llm = { path = "crates/thairag-provider-llm" }
thairag-provider-embedding = { path = "crates/thairag-provider-embedding" }
thairag-provider-vectordb = { path = "crates/thairag-provider-vectordb" }
thairag-provider-search = { path = "crates/thairag-provider-search" }
thairag-provider-reranker = { path = "crates/thairag-provider-reranker" }
thairag-document = { path = "crates/thairag-document" }
thairag-search = { path = "crates/thairag-search" }
thairag-agent = { path = "crates/thairag-agent" }
