[workspace]
resolver = "3"
members = [
    "crates/thairag-core",
    "crates/thairag-config",
    "crates/thairag-thai",
    "crates/thairag-auth",
    "crates/thairag-provider-llm",
    "crates/thairag-provider-embedding",
    "crates/thairag-provider-vectordb",
    "crates/thairag-provider-search",
    "crates/thairag-provider-reranker",
    "crates/thairag-document",
    "crates/thairag-search",
    "crates/thairag-agent",
    "crates/thairag-mcp",
    "crates/thairag-api",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "AGPL-3.0-only"
authors = ["Anuwat Yodngoen <jdevspecialist@gmail.com>"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["macros", "multipart"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["cors", "trace", "request-id", "propagate-header", "util", "set-header"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
rusqlite = { version = "0.32", features = ["bundled"] }

# Search
tantivy = "0.25"

# Thai NLP
nlpo3 = "1.4"

# Vector DB
qdrant-client = "1.13"

# Templates
askama = "0.13"

# Configuration
config = "0.14"

# Document formats
csv = "1.3"
docx-rs = "0.4"
pdf-extract = "0.10"
scraper = "0.22"
calamine = "0.26"

# Embeddings
fastembed = "4.4"

# Auth
jsonwebtoken = "9.3"
argon2 = "0.5"
password-hash = { version = "0.5", features = ["std"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# OIDC
openidconnect = "4"
urlencoding = "2"

# Metrics
prometheus = "0.13"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Streaming
tokio-stream = "0.1"
async-stream = "0.3"
futures-core = "0.3"

# Testing
http-body-util = "0.1"

# Concurrency
dashmap = "6.1"

# Encoding
base64 = "0.22"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
anyhow = "1.0"
async-trait = "0.1"

# MCP
rmcp = { version = "1.2", features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest", "reqwest"] }
sha2 = "0.10"
cron = "0.15"
tokio-util = { version = "0.7", features = ["rt"] }

# Internal crates
thairag-core = { path = "crates/thairag-core" }
thairag-config = { path = "crates/thairag-config" }
thairag-thai = { path = "crates/thairag-thai" }
thairag-auth = { path = "crates/thairag-auth" }
thairag-provider-llm = { path = "crates/thairag-provider-llm" }
thairag-provider-embedding = { path = "crates/thairag-provider-embedding" }
thairag-provider-vectordb = { path = "crates/thairag-provider-vectordb" }
thairag-provider-search = { path = "crates/thairag-provider-search" }
thairag-provider-reranker = { path = "crates/thairag-provider-reranker" }
thairag-document = { path = "crates/thairag-document" }
thairag-search = { path = "crates/thairag-search" }
thairag-agent = { path = "crates/thairag-agent" }
thairag-mcp = { path = "crates/thairag-mcp" }
