[package]
name = "thairag-agent"
edition.workspace = true
version.workspace = true

[dependencies]
thairag-core = { workspace = true }
thairag-config = { workspace = true }
thairag-search = { workspace = true }
thairag-thai = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tokio-stream = { workspace = true }
futures-core = { workspace = true }

[dependencies.thairag-provider-llm]
path = "../thairag-provider-llm"
