[package]
name = "thairag-api"
edition.workspace = true
version.workspace = true

[dependencies]
thairag-core = { workspace = true }
thairag-config = { workspace = true }
thairag-auth = { workspace = true }
thairag-agent = { path = "../thairag-agent" }
thairag-search = { workspace = true }
thairag-provider-llm = { path = "../thairag-provider-llm" }
thairag-provider-embedding = { path = "../thairag-provider-embedding" }
thairag-provider-vectordb = { path = "../thairag-provider-vectordb" }
thairag-provider-search = { path = "../thairag-provider-search" }
thairag-provider-reranker = { path = "../thairag-provider-reranker" }
thairag-document = { workspace = true }

axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
