[package]
name = "thairag-document"
edition.workspace = true
version.workspace = true

[dependencies]
thairag-core = { workspace = true }
thairag-config = { workspace = true }
thairag-thai = { workspace = true }
uuid = { workspace = true }
csv = { workspace = true }
docx-rs = { workspace = true }
pdf-extract = { workspace = true }
scraper = { workspace = true }
calamine = { workspace = true }
image = { workspace = true }
pdfium-render = { workspace = true }
base64 = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

# Build-time provisioning of the native libpdfium binary.
[build-dependencies]
ureq = "2"
flate2 = "1"
tar = "0.4"
