[package]
name = "thairag-provider-embedding"
edition.workspace = true
version.workspace = true

[dependencies]
thairag-core = { workspace = true }
thairag-config = { workspace = true }
async-trait = { workspace = true }
fastembed = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
