[package]
name = "thairag-provider-llm"
edition.workspace = true
version.workspace = true

[dependencies]
thairag-core = { workspace = true }
thairag-config = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio-stream = { workspace = true }
async-stream = { workspace = true }
futures-core = { workspace = true }
