[package]
name = "thairag-provider-redis"
edition.workspace = true
version.workspace = true

[dependencies]
thairag-core = { workspace = true }
redis = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
