[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "thairag"
version = "0.1.0"
description = "Python client for ThaiRAG API"
requires-python = ">=3.9"
dependencies = ["httpx>=0.25"]
license = {text = "AGPL-3.0"}

[project.optional-dependencies]
dev = ["pytest", "pytest-httpx"]
